@@ -136,7 +136,7 @@ check_limbdata (void)
     { 0, 0, { 0 }, 0L },    /* 0 */
 
     { 1,  1, { 1 }, 1L },   /* 1 */
-    { 1, -1, { 1 }, -1L },  /* -1 */
+    { 1, -1, { 1 }, -1UL },  /* -1 */
 
     { 0,  1, { 1 }, 0L },   /* .1 */
     { 0, -1, { 1 }, 0L },   /* -.1 */
